@@ -25,6 +25,10 @@ module.exports = function (https, agent, { version, enabled }) {
 
     agent.logger.debug('shimming https.get function')
     shimmer.wrap(https, 'get', httpShared.traceOutgoingRequest(agent, 'https', 'get'))
+  } else {
+    // We must ensure that the `http` module is instrumented to intercept
+    // `http.{request,get}` that `https.{request,get}` are using.
+    require('http')
   }
 
   return https
