@@ -39,6 +39,9 @@ Notes:
 [float]
 ===== Bug fixes
 
+* Fix 'http' and 'https' instrumentation for outgoing requests to not have the
+  'http' span context be active in user code. ({pull}2470[#2470])
+
 * Fixes for 'ioredis' instrumentation ({pull}2460[#2460]):
 +
 **  Fix run-context so that a span created in the same tick as an ioredis
